--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,27 @@
+@font-face {
+    font-family: "IRANSansWeb(FaNum)";
+    src: url("../fonts/IRANSansWeb\(FaNum\).ttf") format("truetype");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "IRANSansWeb(FaNum)";
+    src: url("../fonts/IRANSansWeb\(FaNum\)_Bold.ttf") format("truetype");
+    font-weight: bold;
+}
+
 * {
     box-sizing: border-box;
     color: #333;
+    font-family: "IRANSansWeb(FaNum)", Arial, Helvetica, Sans-Serif;
+
 }
 
 body {
+    font-family: "IRANSansWeb(FaNum)", Arial, Helvetica, Sans-Serif;
     margin: 0;
+    direction: rtl;
+
 }
 
 .container {
@@ -12,7 +29,7 @@ body {
     padding: 0 60px;
 }
 
-.clearfix{
+.clearfix {
     clear: both;
 }
 
@@ -63,6 +80,7 @@ a {
     border-radius: 3px;
     cursor: pointer;
     outline: none;
+    float: left;
 }
 
 /* page intro */
@@ -73,7 +91,7 @@ a {
     background: rgb(0, 232, 255);
     background: linear-gradient(90deg, rgba(0, 232, 255, 1) 0%, rgba(3, 126, 255, 1) 110%);
     padding: 50px 0;
-    
+
 }
 
 .page_intro_right {
@@ -89,7 +107,7 @@ a {
     font-size: 70px;
 }
 
-.page_intro_right_btns{
+.page_intro_right_btns {
     margin: 0 auto;
     width: 300px;
 }
@@ -99,8 +117,8 @@ a {
     color: #fff;
     background-color: transparent;
     border: 2px solid #fff;
-    width: 120px;
-    font-size: 20px;
+    width: 131px;
+    font-size: 17px;
     padding: 10px;
     border-radius: 5px;
     float: right;
@@ -111,10 +129,114 @@ a {
     width: 50%;
     height: auto;
     float: right;
+
+}
+
+.page_intro_left img {
+    width: 100%;
+    height: auto;
+}
+
+
+
+.new_post {
+
+    width: 25%;
+    height: auto;
+    float: right;
+    padding: 15px;
+
+
+}
+
+.new_post_card {
+    width: 100%;
+    height: 350px;
+    box-shadow: 0px 2px 3px #bbb;
+}
+
+.new_post_pic {
+    width: 100%;
+    height: 250px;
+}
+
+.new_post_pic img{
+    width: 100%;
+    height:100%;
+}
+
+.new_post_body{
+    padding: 10px;
+
+}
+
+.new_post_title{
+    margin: 0;
+    float: right;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.new_post_price{
+    margin:0;
+    float:left;
+    color: #777;
+    font-size: 14px;
+    text-decoration: line-through;
+}
+
+.new_post_description{
+    margin: 0;
+    float: right;
+    font-size: 16px;
+}
+
+.new_post_price_off{
+    margin:0;
+    float:left;
+    font-size: 16px;
+}
+
+
+
+
+@media screen and (max-width:1150px) {
+    .new_post {
+
+        width: 50%;
+    
+    
+    }
+    .container {
+        padding: 0 200px;
+    }
     
 }
 
-.page_intro_left img{
-    width: 100%;
-    height: auto;
+@media screen and (max-width:950px) {
+
+    .container {
+        padding: 0 60px;
+    }
+    
+}
+
+@media screen and (max-width:650px) {
+
+    .new_post {
+
+        width: 100%;
+
+    
+    
+    }
+    
+}
+
+@media screen and (max-width:650px) {
+
+    .container {
+        padding: 0 20px;
+    }
+    
 }
