--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,57 +160,93 @@ a {
     height: 250px;
 }
 
-.new_post_pic img{
+.new_post_pic img {
     width: 100%;
-    height:100%;
+    height: 100%;
 }
 
-.new_post_body{
+.new_post_body {
     padding: 10px;
 
 }
 
-.new_post_title{
+.new_post_title {
     margin: 0;
     float: right;
     font-weight: 400;
     font-size: 18px;
 }
 
-.new_post_price{
-    margin:0;
-    float:left;
+.new_post_price {
+    margin: 0;
+    float: left;
     color: #777;
     font-size: 14px;
     text-decoration: line-through;
 }
 
-.new_post_description{
+.new_post_description {
     margin: 0;
     float: right;
     font-size: 16px;
 }
 
-.new_post_price_off{
-    margin:0;
-    float:left;
+.new_post_price_off {
+    margin: 0;
+    float: left;
     font-size: 16px;
 }
 
+.home_ad{
+    padding-top: 40px;
+}
 
+.home_ad_right {
+    width: 75%;
+    height: 300px;
+    float:right;
+    padding: 30px; 
+}
 
+.home_ad_right img{
+    width:100%;
+    height: 100%;
+    border-radius: 3px;
+}
+
+.home_ad_left {
+    width: 25%;
+    height: 300px;
+    float: left;
+    padding: 30px;
+
+}
+
+.home_ad_left img{
+    width:100%;
+    height: 100%;
+    border-radius: 3px;
+
+}
 
 @media screen and (max-width:1150px) {
     .new_post {
 
         width: 50%;
-    
-    
+
+
     }
+
     .container {
         padding: 0 200px;
     }
-    
+    .home_ad_left{
+        display: none;
+    }
+    .home_ad_right{
+        width: 100%;
+    }
+
 }
 
 @media screen and (max-width:950px) {
@@ -218,7 +254,10 @@ a {
     .container {
         padding: 0 60px;
     }
-    
+    .home_ad_left{
+        display: block;
+    }
+
 }
 
 @media screen and (max-width:650px) {
@@ -227,10 +266,10 @@ a {
 
         width: 100%;
 
-    
-    
+
+
     }
-    
+
 }
 
 @media screen and (max-width:650px) {
@@ -238,5 +277,5 @@ a {
     .container {
         padding: 0 20px;
     }
-    
+
 }
