--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,15 @@ a {
     box-shadow: 0px 1px 2px #bbb;
 }
 
+.hamber_menu{
+    background-color: transparent;
+    border:none;
+    display:none;
+    margin: 20px 0;
+    outline: none;
+    cursor: pointer;
+}
+
 .header_logo {
     float: right;
     padding-top: 5px;
@@ -197,19 +206,19 @@ a {
     font-size: 16px;
 }
 
-.home_ad{
+.home_ad {
     padding-top: 40px;
 }
 
 .home_ad_right {
     width: 75%;
     height: 300px;
-    float:right;
-    padding: 30px; 
+    float: right;
+    padding: 15px;
 }
 
-.home_ad_right img{
-    width:100%;
+.home_ad_right img {
+    width: 100%;
     height: 100%;
     border-radius: 3px;
 }
@@ -218,33 +227,43 @@ a {
     width: 25%;
     height: 300px;
     float: left;
-    padding: 30px;
+    padding: 15px;
 
 }
 
-.home_ad_left img{
-    width:100%;
+.home_ad_left img {
+    width: 100%;
     height: 100%;
     border-radius: 3px;
 
 }
 
+.most_sales_item {
+    float: right;
+    width: calc(100% / 3);
+    height: auto;
+    padding: 15px;
+}
+
 @media screen and (max-width:1150px) {
     .new_post {
-
         width: 50%;
-
-
     }
 
     .container {
         padding: 0 200px;
     }
-    .home_ad_left{
+
+    .home_ad_left {
         display: none;
     }
-    .home_ad_right{
+
+    .home_ad_right {
         width: 100%;
+    }
+
+    .most_sales_item {
+        width: 50%;
     }
 
 }
@@ -254,7 +273,8 @@ a {
     .container {
         padding: 0 60px;
     }
-    .home_ad_left{
+
+    .home_ad_left {
         display: block;
     }
 
@@ -263,19 +283,26 @@ a {
 @media screen and (max-width:650px) {
 
     .new_post {
-
         width: 100%;
-
-
-
     }
-
-}
-
-@media screen and (max-width:650px) {
-
+    .most_sales_item {
+        width: 100%;
+    }
+    .home_ad_left {
+        width: 100%;
+    }
+    .header nav{
+        display: none;
+    }
     .container {
         padding: 0 20px;
+    }
+    .hamber_menu{
+        display:inline-block;
+        margin: 20px 0;
+    }
+    .header_logo{
+        display: none;
     }
 
 }
