--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,17 @@ body {
     padding: 0 60px;
 }
 
+
+.col_4 {
+
+    width: 25%;
+    height: auto;
+    float: right;
+    padding: 15px;
+
+
+}
+
 .clearfix {
     clear: both;
 }
@@ -36,6 +47,7 @@ body {
 ul {
     list-style: none;
     margin: 0;
+    padding: 0;
 }
 
 a {
@@ -49,10 +61,10 @@ a {
     box-shadow: 0px 1px 2px #bbb;
 }
 
-.hamber_menu{
+.hamber_menu {
     background-color: transparent;
-    border:none;
-    display:none;
+    border: none;
+    display: none;
     margin: 20px 0;
     outline: none;
     cursor: pointer;
@@ -146,22 +158,11 @@ a {
     height: auto;
 }
 
-
-
-.new_post {
-
-    width: 25%;
-    height: auto;
-    float: right;
-    padding: 15px;
-
-
-}
-
 .new_post_card {
     width: 100%;
     height: 350px;
     box-shadow: 0px 2px 3px #bbb;
+    background-color: #fff
 }
 
 .new_post_pic {
@@ -238,17 +239,97 @@ a {
 
 }
 
+.most_sales {
+    background-color: #D9F1FF;
+    padding: 10px 0;
+}
+
 .most_sales_item {
     float: right;
     width: calc(100% / 3);
     height: auto;
+    padding: 30px;
+}
+
+.why_us {
+    padding: 30px 0;
+}
+
+.why_us_card {
+    width: 100%;
+    height: auto;
+    text-align: center;
+}
+
+.why_us_card img {
+    width: 40%;
+    height: auto;
+    margin-bottom: 20px;
+
+}
+
+.why_us_card h4 {
+    font-weight: 400;
+    font-size: 18px;
+
+}
+
+.why_us_card p {
+    font-size: 16px;
+    color: #777
+}
+
+/* footer */
+
+.main_footer {
+    width: 100%;
+    height: auto;
+    background-color: #333;
+    padding: 20px 0;
+}
+
+
+.main_footer_f_l {
+    width: 30%;
+    height: auto;
+    float: right;
     padding: 15px;
 }
 
+.main_footer_mid{
+    width: 20%;
+    height: auto;
+    float: right;
+    padding: 15px;
+}
+
+.main_footer_card h4 {
+    font-size: 18px;
+    font-weight: 400;
+    color: #fff;
+}
+.main_footer_card p {
+    font-size: 16px;
+    font-weight: 200;
+    color: #fff;
+}
+
+.main_footer_card ul li a{
+    font-size: 16px;
+    font-weight: 200;
+    color: #fff;
+}
+.main_footer_card ul li{
+    margin-bottom: 3px;
+}
+
+.main_footer_card_namad img{
+    width: 100px;
+    height: 100px;
+}
+
+
 @media screen and (max-width:1150px) {
-    .new_post {
-        width: 50%;
-    }
 
     .container {
         padding: 0 200px;
@@ -266,6 +347,22 @@ a {
         width: 50%;
     }
 
+    .col_4 {
+        width: 50%;
+    }
+
+    .main_footer_f_l {
+        width: 50%;
+
+    }
+    
+    .main_footer_mid{
+        width: 50%;
+
+    }
+    
+    
+
 }
 
 @media screen and (max-width:950px) {
@@ -278,30 +375,65 @@ a {
         display: block;
     }
 
+    .col_4 {
+        width: 50%;
+    }
+
+    .main_footer_f_l {
+        width: 50%;
+
+    }
+    
+    .main_footer_mid{
+        width: 50%;
+
+    }
+    .page_intro_left{
+        display: none;
+    }
+
 }
 
 @media screen and (max-width:650px) {
 
-    .new_post {
-        width: 100%;
-    }
     .most_sales_item {
         width: 100%;
     }
+
     .home_ad_left {
         width: 100%;
     }
-    .header nav{
+
+    .header nav {
         display: none;
     }
+
     .container {
         padding: 0 20px;
     }
-    .hamber_menu{
-        display:inline-block;
+
+    .hamber_menu {
+        display: inline-block;
         margin: 20px 0;
     }
-    .header_logo{
+
+    .header_logo {
+        display: none;
+    }
+
+    .col_4 {
+        width: 100%;
+    }
+    .main_footer_f_l {
+        width: 100%;
+
+    }
+    
+    .main_footer_mid{
+        width: 100%;
+
+    }
+    .page_intro_left{
         display: none;
     }
 
